Closed
Bug 1602774
Opened 6 years ago
Closed 6 years ago
error: definition of implicit copy constructor for 'RangedPtr<const char16_t>' is deprecated because it has a user-declared copy assignment operator [-Werror,-Wdeprecated-copy]
Categories
(Developer Infrastructure :: Source Code Analysis, defect)
Developer Infrastructure
Source Code Analysis
Tracking
(firefox73 fixed)
RESOLVED
FIXED
mozilla73
| Tracking | Status | |
|---|---|---|
| firefox73 | --- | fixed |
People
(Reporter: Sylvestre, Assigned: froydnj)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
building with clang trunk
In file included from Unified_cpp_certverifier0.cpp:11:
In file included from /var/lib/jenkins/workspace/firefox-clang-last/security/certverifier/CertVerifier.cpp:7:
In file included from /var/lib/jenkins/workspace/firefox-clang-last/security/certverifier/CertVerifier.h:30:
In file included from /var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/BasePrincipal.h:10:
In file included from /var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/dist/include/nsJSPrincipals.h:9:
In file included from /var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/dist/include/jsapi.h:16:
In file included from /var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/Range.h:10:
/var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/RangedPtr.h:151:17: error: definition of implicit copy constructor for 'RangedPtr<const char16_t>' is deprecated because it has a user-declared copy assignment operator [-Werror,-Wdeprecated-copy]
RangedPtr<T>& operator=(const RangedPtr<T>& aOther) {
^
/var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/Range.h:20:7: note: in implicit copy constructor for 'mozilla::RangedPtr<const char16_t>' first required here
class Range {
^
| Assignee | ||
Comment 1•6 years ago
|
||
Doing this avoids warnings about implicitly-declared copy constructors.
Updated•6 years ago
|
Assignee: nobody → nfroyd
Pushed by nfroyd@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/42aedd49b347
add a copy constructor to RangedPtr; r=sylvestre
Comment 3•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox73:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
Updated•3 years ago
|
Product: Firefox Build System → Developer Infrastructure
You need to log in
before you can comment on or make changes to this bug.
Description
•