Bug 1602774 - add a copy constructor to RangedPtr; r=sylvestre

Doing this avoids warnings about implicitly-declared copy constructors.

Differential Revision: https://phabricator.services.mozilla.com/D56811

--HG--
extra : moz-landing-system : lando